syntax = "proto3";
package pb;
option go_package = "./;pb";

enum MsgId {
    None = 0;
    Heartbeat = 1001;       // 心跳
    Broadcast = 1002;       // 广播
    Echo = 1003;            // 透传
    CloseConn = 1004;       // 关闭连接
}

// ==========================================

// 心跳请求
message HeartbeatRequest {
}

// 心跳响应
message HeartbeatResponse {
    uint32 ServerTime = 1;         // 服务器时间（时间戳，秒）
}

message BroadcastRequest {
    string Str = 1;
}
message BroadcastResponse {
    uint32 Result = 1;
    string Str = 2;
}

message EchoRequest {
    string Message = 2;
}

message EchoResponse {
    string Message = 1;
}

message CloseConnNotify {
    string Message = 1;
}
